--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.mvc.static-path-pattern=/**
 # Locations of static resources.
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/
 
+# personnalisation du pool de connexions
+spring.datasource.hikari.maximum-pool-size=1
+
 pokemonType.service.url=https://pokemon-type-juwit.herokuapp.com/
+trainer.service.url=https://trainer-api-juwit-vandamme.herokuapp.com/
