tp sécurité avancé

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,8 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 spring.datasource.hikari.maximum-pool-size=1
 
 pokemonType.service.url=https://pokemon-type-juwit.herokuapp.com/
-trainer.service.url=https://trainer-api-juwit-vandamme.herokuapp.com/
+#trainer.service.url=https://trainer-api-juwit-vandamme.herokuapp.com/
+
+trainer.service.url=http://localhost:8081
+trainer.service.username=user
+trainer.service.password=c3039ecb-ac3f-4805-91ab-65180b6ad6b8
