--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ pokemonType.service.url=https://pokemon-type-juwit.herokuapp.com/
 trainer.service.url=http://localhost:8081
 trainer.service.username=user
 trainer.service.password=c3039ecb-ac3f-4805-91ab-65180b6ad6b8
+
+spring.mustache.expose-request-attributes=true
