--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 spring.datasource.hikari.maximum-pool-size=1
 
 pokemonType.service.url=https://pokemon-type-juwit.herokuapp.com/
+#pokemonType.service.url=http://localhost:8080
 #trainer.service.url=https://trainer-api-juwit-vandamme.herokuapp.com/
 
 trainer.service.url=http://localhost:8081
