postman + fix affichage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ pokemonType.service.url=https://pokemon-type-juwit.herokuapp.com/
 #pokemonType.service.url=http://localhost:8080
 #trainer.service.url=https://trainer-api-juwit-vandamme.herokuapp.com/
 
-trainer.service.url=http://localhost:8081
+trainer.service.url=http://localhost:8081/
 trainer.service.username=user
 trainer.service.password=c3039ecb-ac3f-4805-91ab-65180b6ad6b8
 
